<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/content_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detail_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="@dimen/content_title_text_size" />
        </FrameLayout>

        <LinearLayout
            style="@style/layout_margin"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/poster_detail_image"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/layout_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/release_date_label"
                        style="@style/movieLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_release_date" />

                    <TextView
                        android:id="@+id/release_date_text"
                        style="@style/movieText" />


                </LinearLayout>

                <LinearLayout
                    style="@style/layout_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/release_vote_label"
                        style="@style/movieLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_vote" />

                    <TextView
                        android:id="@+id/release_vote_text"
                        style="@style/movieText" />


                </LinearLayout>

                <ImageView
                    android:id="@+id/favorite_image"
                    style="@style/layout_margin"
                    android:src="@drawable/ic_favorite_border_black_36dp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            style="@style/layout_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/release_synopsis_label"
                style="@style/movieLabel"
                android:text="@string/label_synopsis" />

            <TextView
                android:id="@+id/release_synopsis_text"
                style="@style/movieText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/movieLabel"
                android:text="@string/label_videos" />

            <com.mkd.popular.movies.customlistview.NonScrollListView
                android:id="@+id/videos_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/videosprogressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/movieLabel"
                android:text="@string/label_reviews" />

            <com.mkd.popular.movies.customlistview.NonScrollListView
                android:id="@+id/reviews_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/reviewsprogressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <TextView
                style="@style/movieText"
                android:id="@+id/reviewsEmptyPlaceHolder"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
